--- a/walkthroughs/ocp/walkthrough.adoc
+++ b/walkthroughs/ocp/walkthrough.adoc
@@ -10,7 +10,7 @@
 
 
 :east-cluster: OpenShift Container Platform
-:east-namespace: crc
+:east-namespace: ocp
 :east-docs-link: https://docs.openshift.com/container-platform/4.4/welcome/index.html
 :east-cli: oc
 :skupper-east: skupper 2
@@ -28,8 +28,8 @@ The frontend is deployed in the *{west-namespace}* namespace of the {west-cluste
 :overview-uml: overview
 
 image::Overview.svg[]
-....
-....
+
+
 
 While these instructions use this particular application for demonstration purposes, the steps are the same for any Skupper
 deployment.
