--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,1 +1,3 @@
-*  xref:index.adoc[ Home]
+* xref:index.adoc[Home]
+* xref:crc:index.adoc[CodeReady Containers]
+* xref:crc:index.adoc[OpenShift Container Platform]
