--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,19 @@
 = Solution Patterns for Skupper
 
-Based on https://skupper.io/start/index.html
+Project: https://skupper.io/
+
+Status: In development
+
+Requirments: 
+
+* Ability to create a namespace in cluster
+* Access to a second cluster, eg crc
+
+Notes:
+
+Based on https://skupper.io/start/index.html 
+
+Currently https://github.com/pwright/skupper-solution-pattern/blob/master/walkthroughs/ocp/walkthrough.adoc is broken
+
 
 
