--- a/walkthroughs/crc/walkthrough.adoc
+++ b/walkthroughs/crc/walkthrough.adoc
@@ -1,6 +1,8 @@
+:cluster-type: CodeReady Containers
+:solution-pattern-title: Communicating with a {cluster-type} cluster using Skupper
 :skupper-name: Skupper
 :skupper_cli_release: 0.2.0
-
+:crc: true
 
 
 :west-cluster: Managed Integration
@@ -9,14 +11,14 @@
 :skupper-west: skupper 1
 
 
-:east-cluster: CodeReady Containers
+:east-cluster: {cluster-type}
 :east-namespace: crc
 :east-docs-link: https://code-ready.github.io/crc/
 :east-cli: oc
 :skupper-east: skupper 2
 
 
-= Communicating with another cluster using Skupper
+= {solution-pattern-title}
 
 Securely enable communications across OpenShift clusters.
 
@@ -149,9 +151,12 @@ Start a terminal session for each of your namespaces.  Set the
 
 . Log into the *{east-cluster}* cluster.
 
+
 .. Start {east-cluster}:
 
  $ crc start
+
+
 
 .. Log into the {east-cluster} cluster using the command displayed in the output, for example:
 
